--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "js/three.min.js"></script>
-    <script src = "js/cannon.min.js"></script>
-    <script src = "js/mg.js"></script>
-    <script src = "js/composer.js"></script>
-    <script src = "js/test.js"></script>
+    <script src= "js/three.min.js"></script>
+    <script src= "js/cannon.min.js"></script>
+    <script type = "module" src = "js/snake.js"></script>
 </body>
 </html>
