new asset  structure

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src= "js/three.min.js"></script>
-    <script src= "js/cannon.min.js"></script>
-    <script type = "module" src = "js/snake.js"></script>
+    <script src= "js/mgame/dependencies/three.min.js"></script>
+    <script src= "js/mgame/dependencies/cannon.min.js"></script>
+    <script type = "module" src = "snake/snake.js"></script>
 </body>
 </html>
