--- a/index.html
+++ b/index.html
@@ -21,14 +21,24 @@
         100% { transform: rotate(360deg); }
         }
     </style>
-    <title>Snake game</title>
+    <style>
+        #loadingMessage {
+            position: absolute;
+            top: 20%;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            z-index: 100;
+            color:rgb(8, 22, 224);
+            transform: translateZ(0); 
+        }
+    </style>
+    <title>Road Train game</title>
 </head>
 <body>
     <div id="myLoader" class="loader"></div>
+    <div id="loadingMessage">Please Wait</div>
     <script src= "js/mgame/dependencies/three.min.js"></script>
-    <script>
-        var gameLoadingProgress = {progressBar:document.getElementById("myLoader") , totalObject:229 , loading:true} ;
-    </script>
     <script src= "js/mgame/dependencies/cannon.min.js"></script>
     <script type = "module" src = "snake/snake.js"></script>
 </body>
