--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         .loader {
         margin: auto;
         width:50%;
+        height: 50%;
         border: 16px solid #f3f3f3; /* Light grey */
         border-top: 16px solid #3498db; /* Blue */
         border-radius: 50%;
@@ -37,7 +38,7 @@
 </head>
 <body>
     <div id="myLoader" class="loader"></div>
-    <div id="loadingMessage">Please Wait</div>
+    <div id="loadingMessage"><h1>Please wait.</h1> Loading game textures takes longer than usual.</div>
     <script src= "js/mgame/dependencies/three.min.js"></script>
     <script src= "js/mgame/dependencies/cannon.min.js"></script>
     <script type = "module" src = "snake/snake.js"></script>
