--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <div id="loadingMessage"><h1>Please wait.</h1> Loading game textures takes longer than usual.</div>
     <script src= "js/mgame/dependencies/three.min.js"></script>
     <script src= "js/mgame/dependencies/cannon.min.js"></script>
-    <script type = "module" src = "snake/snake.js"></script>
+    <script type = "module" src = "roadtrain/roadtrain.js"></script>
 </body>
 </html>
