--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <link rel="stylesheet" href="styles.css" />
     <title>Road Train game</title>
   </head>
   <body>
@@ -19,8 +19,8 @@
         <h6>Since 2018</h6>
       </div>
     </div>
-    <!-- <script src="/mgame/dependencies/three.min.js"></script>
-    <script src="/mgame/dependencies/cannon.min.js"></script> -->
-    <script src="dist/bundle.js"></script>
+    <script src="/mgame/dependencies/three.min.js"></script>
+    <script src="/mgame/dependencies/cannon.min.js"></script>
+    <script type="module" src="/roadtrain/roadtrain.js"></script>
   </body>
 </html>
