file path bug fixed

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h6>Since 2018</h6>
       </div>
     </div>
-    <script src="/mgame/dependencies/three.min.js"></script>
-    <script src="/mgame/dependencies/cannon.min.js"></script>
-    <script type="module" src="/roadtrain/roadtrain.js"></script>
+    <script src="./mgame/dependencies/three.min.js"></script>
+    <script src="./mgame/dependencies/cannon.min.js"></script>
+    <script type="module" src="./roadtrain/roadtrain.js"></script>
   </body>
 </html>
