loading message added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </p>
         <h6>Author:Makan Edrisi</h6>
         <h6>Since 2018</h6>
+        <div class="load-message">Loading...</div>
       </div>
     </div>
     <script src="./mgame/dependencies/three.min.js"></script>
